--- a/gallery/index.html
+++ b/gallery/index.html
@@ -167,13 +167,13 @@
         display: none; /* hide normal nav */
         flex-direction: column;
         position: absolute;
-        top: 70px; /* header ni niche */
+        top: 60px; /* adjusted from 70px */
         right: 20px;
         background: var(--card);
         padding: 12px 20px;
         border-radius: 12px;
         box-shadow: 0 2px 8px rgba(0,0,0,0.6);
-        z-index: 100;
+        z-index: 1000; /* increased z-index */
         min-width: 140px;
       }
       nav.show {
@@ -300,6 +300,7 @@
     const menuBtn = document.getElementById('menuBtn');
     const navLinks = document.getElementById('nav-links');
     menuBtn.addEventListener('click', () => {
+      // console.log('Menu button clicked'); // uncomment for debug
       const expanded = menuBtn.getAttribute('aria-expanded') === 'true' || false;
       menuBtn.setAttribute('aria-expanded', !expanded);
       navLinks.classList.toggle('show');
