--- a/gallery/index.html
+++ b/gallery/index.html
@@ -231,8 +231,7 @@
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
     import { getFirestore, collection, getDocs, query, orderBy } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
     import { getStorage, ref as storageRef, getDownloadURL } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-storage.js";
-    // import config
-    import { firebaseConfig } from "../firebase-config.js";
+    import { firebaseConfig } from '../firebase-config.js';
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
