--- a/gallery/index.html
+++ b/gallery/index.html
@@ -233,13 +233,13 @@
 
     // Inline your firebaseConfig here:
     const firebaseConfig = {
-      apiKey: "AIzaSyBFM1T3GctmY9-gX1ijPxmDW7CqgOVu8cc",
-      authDomain: "keval-photography.firebaseapp.com",
-      projectId: "keval-photography",
-      storageBucket: "keval-photography.firebasestorage.app",
-      messagingSenderId: "512590520552",
-      appId: "1:512590520552:web:27133c664cd9e0166da95d",
-      measurementId: "G-XV370VQS31"
+      apiKey: "AIzaSyDSOpp4Wnk-4ez07FDSRgwGvcFc8IfDOEc",
+      authDomain: "keval-photography-new.firebaseapp.com",
+      projectId: "keval-photography-new",
+      storageBucket: "keval-photography-new.firebasestorage.app",
+      messagingSenderId: "66814793935",
+      appId: "1:66814793935:web:5f273ac3cf4b5096353fba",
+      measurementId: ""
     };
 
     const app = initializeApp(firebaseConfig);
