--- a/admin/index.html
+++ b/admin/index.html
@@ -65,7 +65,16 @@
     import { getAuth, signInWithEmailAndPassword, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
     import { getFirestore, collection, addDoc, getDocs, doc, updateDoc, deleteDoc, serverTimestamp, getDoc } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
     import { getStorage, ref as sRef, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-storage.js";
-    import { firebaseConfig } from '../firebase-config.js';
+
+    // Firebase config inline here
+    const firebaseConfig = {
+      apiKey: "AIzaSyDSOpp4Wnk-4ez07FDSRgwGvcFc8IfDOEc",
+      authDomain: "keval-photography-new.firebaseapp.com",
+      projectId: "keval-photography-new",
+      storageBucket: "keval-photography-new.firebasestorage.app",
+      messagingSenderId: "66814793935",
+      appId: "1:66814793935:web:5f273ac3cf4b5096353fba"
+    };
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
