--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,175 +1,413 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>📸 Keval Photography</title>
-<style>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Gallery — Keval Kotadia</title>
+  <link rel="icon" href="../gallery/favicon.png" />
+  <style>
+    :root {
+      --bg:#071021;
+      --card:#0f1720;
+      --muted:#a7b0b8;
+      --accent:#f59e0b;
+      --white:#fff;
+    }
+    * {
+      box-sizing: border-box;
+    }
     body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        background: #f5f5f5;
+      margin: 0;
+      background: linear-gradient(180deg,#071021,#081428);
+      color: var(--white);
+      font-family: Inter, system-ui, Arial;
     }
-    h1 {
-        text-align: center;
-        padding: 15px;
-        background: #222;
-        color: white;
-        margin: 0;
+    .container {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 20px;
     }
-    .gallery {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
-        gap: 15px;
-        padding: 20px;
+    header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 12px;
+      margin-bottom: 18px;
+      position: relative;
+      padding-right: 20px;
     }
-    .gallery-item {
-        background: white;
-        border-radius: 12px;
-        overflow: hidden;
-        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        transition: transform 0.2s ease;
+    .logo {
+      width: 44px;
+      height: 44px;
+      border-radius: 10px;
+      background: linear-gradient(135deg,#111827,#0ea5a9);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: 700;
+      user-select: none;
     }
-    .gallery-item:hover {
-        transform: scale(1.03);
+    nav {
+      display: flex;
+      gap: 12px;
     }
-    .gallery-item img {
-        width: 100%;
-        height: auto;
-        cursor: pointer;
-        display: block;
-        border-radius: 12px 12px 0 0;
+    nav a {
+      color: var(--white);
+      text-decoration: none;
+      font-size: 14px;
     }
-    .desc {
-        padding: 10px;
-        font-size: 14px;
-        color: #555;
-        text-align: center;
+    nav a:hover,
+    nav a:focus {
+      color: var(--accent);
+      outline: none;
+    }
+    h2 {
+      margin: 0 0 12px;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill,minmax(220px,1fr));
+      gap: 16px;
+    }
+    .card {
+      background: rgba(255,255,255,0.02);
+      border-radius: 12px;
+      overflow: hidden;
+      cursor: pointer;
+    }
+    .card img {
+      width: 100%;
+      height: 220px;
+      object-fit: cover;
+      display: block;
+    }
+    .meta {
+      padding: 10px;
+    }
+    .meta h3 {
+      margin: 0 0 6px;
+      font-size: 16px;
+    }
+    .meta p {
+      margin: 0;
+      color: var(--muted);
+      font-size: 13px;
+    }
+    .meta p.desc {
+      margin-top: 6px;
+      font-size: 12px;
+      color: var(--muted);
+      white-space: normal;
+      max-height: 3.6em;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    /* lightbox */
+    .lightbox {
+      position: fixed;
+      inset: 0;
+      display: none;
+      align-items: center;
+      justify-content: center;
+      background: rgba(0,0,0,0.9);
+      z-index: 9999;
+      padding: 20px;
+      flex-direction: column;
+    }
+    .lightbox.open {
+      display: flex;
+    }
+    .lightbox img {
+      max-width: 95%;
+      max-height: 85%;
+      border-radius: 12px; /* updated */
+      user-select: none;
+    }
+    #lbCaption {
+      margin-top: 12px;
+      max-width: 90vw;
+      color: var(--muted);
+      font-size: 14px;
+      text-align: center;
+      user-select: text;
+    }
+    .lb-close {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      background: rgba(0,0,0,0.5);
+      padding: 8px;
+      border-radius: 8px;
+      cursor: pointer;
+      color: var(--white);
+      font-size: 18px;
+      border: none;
+      z-index: 10000;
+    }
+    .lb-close:focus {
+      outline: 2px solid var(--accent);
+      outline-offset: 2px;
     }
     .download-btn {
-        display: block;
-        text-align: center;
-        padding: 10px;
-        background: #007BFF;
-        color: white;
-        text-decoration: none;
-        font-weight: bold;
-        border-radius: 0 0 12px 12px;
+      position: absolute;
+      top: 20px;
+      right: 80px;
+      background: var(--accent);
+      color: #050505;
+      padding: 8px 10px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: 600;
+      z-index: 10000;
     }
-    .download-btn:hover {
-        background: #0056b3;
+
+    footer {
+      margin: 40px 0 10px;
+      color: var(--muted);
+      text-align: center;
     }
-    /* Modal Styles */
-    .modal {
-        display: none;
-        position: fixed;
-        z-index: 999;
-        padding-top: 50px;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        overflow: auto;
-        background-color: rgba(0,0,0,0.85);
-        animation: fadeIn 0.3s ease-in-out;
+
+    /* Hamburger menu icon */
+    .menu-icon {
+      display: none; /* desktop hide */
+      font-size: 28px;
+      cursor: pointer;
+      user-select: none;
+      color: var(--white);
+      background: transparent;
+      border: none;
+      padding: 0;
     }
-    @keyframes fadeIn {
-        from {opacity: 0;}
-        to {opacity: 1;}
+    .menu-icon:focus {
+      outline: 2px solid var(--accent);
+      outline-offset: 2px;
     }
-    .modal-content {
-        margin: auto;
-        display: block;
-        max-width: 90%;
-        max-height: 80%;
-        border-radius: 15px;
-        box-shadow: 0 0 15px rgba(255,255,255,0.3);
-        animation: scaleIn 0.3s ease-in-out;
-    }
-    @keyframes scaleIn {
-        from {transform: scale(0.8);}
-        to {transform: scale(1);}
-    }
-    .close {
+
+    /* Mobile nav hidden by default */
+    @media (max-width: 768px) {
+      nav {
+        display: none; /* hide normal nav */
+        flex-direction: column;
         position: absolute;
-        top: 20px;
-        right: 35px;
-        color: #fff;
-        font-size: 40px;
-        font-weight: bold;
-        cursor: pointer;
-        text-decoration: none;
+        top: 60px;
+        right: 20px;
+        background: var(--card);
+        padding: 12px 20px;
+        border-radius: 12px;
+        box-shadow: 0 2px 8px rgba(0,0,0,0.6);
+        z-index: 1000;
+        min-width: 140px;
+      }
+      nav.show {
+        display: flex;
+      }
+      .menu-icon {
+        display: block;
+      }
     }
-    @media screen and (max-width: 768px) {
-        .gallery {
-            grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-        }
+
+    @media(min-width:900px){
+      .card img {
+        height: 200px;
+      }
     }
-</style>
+  </style>
 </head>
 <body>
+  <div class="container">
+    <header>
+      <div style="display:flex;align-items:center;gap:12px">
+        <div class="logo" aria-label="Keval Kotadia Logo">KK</div>
+        <div>
+          <h1 style="margin:0;font-size:18px">Keval Kotadia</h1>
+          <div style="color:var(--muted);font-size:13px">Nature & Landscape</div>
+        </div>
+      </div>
 
-<h1>📸 Keval Photography</h1>
-<div class="gallery" id="gallery"></div>
+      <!-- Hamburger icon for mobile -->
+      <button class="menu-icon" id="menuBtn" aria-label="Toggle navigation menu" aria-expanded="false" aria-controls="nav-links">☰</button>
 
-<!-- Modal -->
-<div id="imgModal" class="modal">
-    <span class="close" onclick="closeModal()">&times;</span>
-    <img class="modal-content" id="modalImage">
-</div>
+      <nav id="nav-links" role="navigation">
+        <a href="../">Home</a>
+        <a href="../admin/">Admin</a>
+        <a href="https://www.instagram.com/keval.kotadia" target="_blank" rel="noopener noreferrer">Instagram</a>
+      </nav>
+    </header>
 
-<script type="module">
+    <main>
+      <h2>Gallery</h2>
+      <div id="grid" class="grid" aria-live="polite"></div>
+    </main>
+
+    <div id="lightbox" class="lightbox" role="dialog" aria-modal="true" tabindex="-1">
+      <button id="lbClose" class="lb-close" aria-label="Close">✕</button>
+      <a id="download" class="download-btn" download>⬇ Download</a>
+      <img id="lbImg" src="" alt="" />
+      <div id="lbCaption"></div>
+    </div>
+
+    <footer>© <span id="year"></span> Keval Kotadia</footer>
+  </div>
+
+  <!-- Firebase SDKs using v9 modular via CDN -->
+  <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
     import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
 
-    // Firebase Config
     const firebaseConfig = {
-        apiKey: "YOUR_API_KEY",
-        authDomain: "keval-photography-new.firebaseapp.com",
-        projectId: "keval-photography-new",
-        storageBucket: "keval-photography-new.appspot.com",
-        messagingSenderId: "YOUR_SENDER_ID",
-        appId: "YOUR_APP_ID"
+      apiKey: "AIzaSyDSOpp4Wnk-4ez07FDSRgwGvcFc8IfDOEc",
+      authDomain: "keval-photography-new.firebaseapp.com",
+      projectId: "keval-photography-new",
+      storageBucket: "keval-photography-new.firebasestorage.app",
+      messagingSenderId: "66814793935",
+      appId: "1:66814793935:web:69b4297f84dad3f4353fba",
     };
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
 
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    const grid = document.getElementById('grid');
+    const lb = document.getElementById('lightbox');
+    const lbImg = document.getElementById('lbImg');
+    const lbClose = document.getElementById('lbClose');
+    const downloadBtn = document.getElementById('download');
+    const lbCaption = document.getElementById('lbCaption');
+
+    let galleryItems = [];
+    let currentIndex = -1;
+
     async function loadGallery() {
-        const snapshot = await getDocs(collection(db, "gallery"));
-        const gallery = document.getElementById("gallery");
-
-        snapshot.forEach(doc => {
-            const data = doc.data();
-            const imageUrl = data.imageUrl;
-            const description = data.description || "No description";
-
-            const div = document.createElement("div");
-            div.classList.add("gallery-item");
-
-            // Append &download param to force download
-            const downloadUrl = imageUrl + "&download=" + encodeURIComponent("photo.jpg");
-
-            div.innerHTML = `
-                <img src="${imageUrl}" alt="Gallery Image" onclick="openModal('${imageUrl}')">
-                <div class="desc">${description}</div>
-                <a href="${downloadUrl}" download="photo.jpg" class="download-btn">Download</a>
-            `;
-            gallery.appendChild(div);
+      grid.innerHTML = '';
+      try {
+        const q = collection(db, 'gallery');
+        const snap = await getDocs(q);
+        galleryItems = [];
+        snap.forEach(doc => {
+          const data = doc.data();
+          galleryItems.push({ id: doc.id, ...data });
         });
+
+        if (galleryItems.length === 0) {
+          grid.innerHTML = '<div style="color:var(--muted)">No photos yet.</div>';
+          return;
+        }
+
+        galleryItems.forEach((item, index) => {
+          const card = document.createElement('div');
+          card.className = 'card';
+          const img = document.createElement('img');
+          img.alt = item.title || '';
+          img.src = item.src;
+          img.loading = 'lazy';
+          img.addEventListener('click', () => openLightbox(index));
+          const meta = document.createElement('div');
+          meta.className = 'meta';
+          meta.innerHTML = `
+            <h3>${item.title || ''}</h3>
+            <p>${item.year || ''}</p>
+            <p class="desc">${item.description || ''}</p>
+          `;
+          card.appendChild(img);
+          card.appendChild(meta);
+          grid.appendChild(card);
+        });
+
+      } catch (err) {
+        console.error(err);
+        grid.innerHTML = '<div style="color:var(--muted)">Gallery not available.</div>';
+      }
     }
 
+    function openLightbox(index) {
+      if (index < 0 || index >= galleryItems.length) return;
+      currentIndex = index;
+      const item = galleryItems[index];
+      lbImg.src = item.src;
+      lbImg.alt = item.title || '';
+      lbCaption.textContent = item.description || '';
+      lb.classList.add('open');
+      lb.focus();
+
+      // Fix download button: force download with filename
+      downloadBtn.href = item.src;
+      downloadBtn.setAttribute('download', (item.title || 'photo') + '.jpg');
+      downloadBtn.onclick = (e) => {
+        e.stopPropagation(); // prevent closing lightbox when clicking download
+      };
+    }
+
+    function closeLightbox() {
+      lb.classList.remove('open');
+      currentIndex = -1;
+    }
+
+    function showNext() {
+      if (galleryItems.length === 0) return;
+      currentIndex = (currentIndex + 1) % galleryItems.length;
+      openLightbox(currentIndex);
+    }
+
+    function showPrev() {
+      if (galleryItems.length === 0) return;
+      currentIndex = (currentIndex - 1 + galleryItems.length) % galleryItems.length;
+      openLightbox(currentIndex);
+    }
+
+    lbClose.addEventListener('click', closeLightbox);
+
+    lb.addEventListener('click', (e) => {
+      if (e.target === lb) closeLightbox();
+    });
+
+    // Keyboard navigation
+    window.addEventListener('keydown', (e) => {
+      if (!lb.classList.contains('open')) return;
+      if (e.key === 'ArrowRight') {
+        showNext();
+      } else if (e.key === 'ArrowLeft') {
+        showPrev();
+      } else if (e.key === 'Escape') {
+        closeLightbox();
+      }
+    });
+
+    // Touch swipe navigation
+    let touchStartX = 0;
+    let touchEndX = 0;
+    const swipeThreshold = 50;
+
+    lb.addEventListener('touchstart', (e) => {
+      touchStartX = e.changedTouches[0].screenX;
+    });
+    lb.addEventListener('touchend', (e) => {
+      touchEndX = e.changedTouches[0].screenX;
+      handleSwipeGesture();
+    });
+
+    function handleSwipeGesture() {
+      const diff = touchEndX - touchStartX;
+      if (Math.abs(diff) > swipeThreshold) {
+        if (diff > 0) {
+          showPrev();
+        } else {
+          showNext();
+        }
+      }
+    }
+
+    // Hamburger menu toggle
+    const menuBtn = document.getElementById('menuBtn');
+    const navLinks = document.getElementById('nav-links');
+    menuBtn.addEventListener('click', () => {
+      const expanded = menuBtn.getAttribute('aria-expanded') === 'true' || false;
+      menuBtn.setAttribute('aria-expanded', !expanded);
+      navLinks.classList.toggle('show');
+    });
+
     loadGallery();
-
-    window.openModal = function(imgSrc) {
-        document.getElementById("modalImage").src = imgSrc;
-        document.getElementById("imgModal").style.display = "block";
-    };
-
-    window.closeModal = function() {
-        document.getElementById("imgModal").style.display = "none";
-    };
-</script>
-
+  </script>
 </body>
 </html>
